@@ -134,7 +134,9 @@ DeleteUser=DELETE FROM users WHERE userid IN ($del)
 ValidUser=SELECT * FROM users WHERE userid=? AND password=SHA1(?)
 ChangePassword=UPDATE users SET password=SHA1(?) WHERE userid=?
 
-GetUserByAct=SELECT * FROM users WHERE actuserid=?
+GetUserByAct=SELECT u.*,x.code FROM users u \
+    INNER JOIN ixsurvey AS x ON x.userid=u.userid \
+    WHERE u.actuserid=?
 UpdateActUser=UPDATE users SET actuserid=? WHERE userid=?
 
 GetUserInfoByID=SELECT * FROM users WHERE userid=?
