@@ -3,6 +3,7 @@ Changes for Labyrinth-Plugin-Survey
 
         - provide SQL to disable Talks and Users.
         - ignore disabled users when sending announcements.
+        - added initial Survey API module.
 
 0.06	2014-09-19
         - list of courses/talks should not be based on room allocation.
